feat: add GET /health to api
