# internal/api/codegen_api.go
@@ -151,6 +151,9 @@ type PostUsersSetIsActiveJSONRequestBody PostUsersSetIsActiveJSONBody
 
 // ServerInterface represents all server handlers.
 type ServerInterface interface {
+	// Проверка доступности сервиса (Liveness Probe)
+	// (GET /health)
+	GetHealth(ctx echo.Context) error
 	// Создать PR и автоматически назначить до 2 ревьюверов из команды автора
 	// (POST /pullRequest/create)
 	PostPullRequestCreate(ctx echo.Context) error
@@ -177,6 +180,15 @@ type ServerInterface interface {
 // ServerInterfaceWrapper converts echo contexts to parameters.
 type ServerInterfaceWrapper struct {
 	Handler ServerInterface
+}
+
+// GetHealth converts echo context to params.
+func (w *ServerInterfaceWrapper) GetHealth(ctx echo.Context) error {
+	var err error
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.GetHealth(ctx)
+	return err
 }
 
 // PostPullRequestCreate converts echo context to params.
@@ -288,6 +300,7 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 		Handler: si,
 	}
 
+	router.GET(baseURL+"/health", wrapper.GetHealth)
 	router.POST(baseURL+"/pullRequest/create", wrapper.PostPullRequestCreate)
 	router.POST(baseURL+"/pullRequest/merge", wrapper.PostPullRequestMerge)
 	router.POST(baseURL+"/pullRequest/reassign", wrapper.PostPullRequestReassign)
